[package]
authors = [
    "Jorge Aparicio <japaricious@gmail.com>",
    "Brook Heisler <brookheisler@gmail.com>",
    "Lőrinc Serfőző <serfozo.lorinc@gmail.com>",
    "Alice Ryhl <alice@ryhl.io>",
    "Dylan DPC <dylan.dpc@gmail.com>"
    ]
name = "ploteria"
version = "0.1.0"
edition = "2018"

description = "Criterion's plotting library"
repository = "https://github.com/ploteria/ploteria"
readme = "README.md"
keywords = ["plotting", "gnuplot", "criterion"]
categories = ["visualization"]
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1"
cast = { version = "0.2", default-features = false }
itertools = { version = "0.9", default-features = false }

[dev-dependencies]
itertools-num = { version = "0.1", default-features = false }
num-complex = { version = "0.3", default-features = false, features = ["std"] }
rand = "0.4"
